# p5-widget

./: .gitignore  Makefile  README.md  package.json  pyproject.toml
docs/: index.html
examples/: demo.py  notebook.py  sketch-0.js  sketch-template.js
src/js/: p5-1.11.5.mjs  p5-2.0.0.mjs  widget.js
src/p5_widget/: __init__.py
src/p5widget/: __init__.py  p5widget.js
