[project]
name = "p5-widget"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "George Y. Kussumoto", email = "georgeyk.dev@gmail.com" }
]
requires-python = ">=3.11.5"
dependencies = [
    "anywidget>=0.9.18",
    "traitlets>=5.14.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "marimo>=0.13.0",
    "mypy>=1.15.0",
    "ruff>=0.11.6",
]
